# gitlab-hierarchy

./: .gitignore  README.md  main.yaml  pyproject.toml  requirements.txt
roles/gitlab_hierarchy/defaults/: main.yaml
roles/gitlab_hierarchy/filter_plugins/: flatten_groups.py
roles/gitlab_hierarchy/meta/: main.yml
roles/gitlab_hierarchy/tasks/: main.yaml
