[tool.poetry]
name = "gitlab-automation"
version = "0.1.0"
description = "Automatisation GitLab pour homelab avec Ansible"
authors = ["cynis <cynistrue@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.5.0"
ansible-core = "^2.15.0"
python-gitlab = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"